excluded vendor path

--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ social:
 
 # Build settings
 include: ["_categories"]
-exclude: ["Gemfile", "Gemfile.lock"]
+exclude: ["Gemfile", "Gemfile.lock", "vendor"]
 markdown: kramdown
 permalink: /:year/:month/:day/:title/
 
