--- a/_config.yml
+++ b/_config.yml
@@ -31,4 +31,4 @@ sass:
   style: compressed
 
 # Gems
-gems: [jekyll-paginate, jekyll-sitemap, octopress-autoprefixer, jekyll, travis]
+gems: [jekyll-paginate, jekyll-sitemap, jekyll, octopress-autoprefixer, travis]
