Added missing s3 deploy config to prevent cleanup prior to publish

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,5 +21,6 @@ deploy:
   local-dir: _site
   acl: public_read
   region: eu-west-1
+  skip_cleanup: true
   on:
     repo: devoctomy/devoctomy.com
