--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # Site settings
 email: nick@devoctomy.com
-baseurl: ""
+baseurl: "http://www.devoctomy.com"
 paginate: 5
 paginate_path: "/blog/page-:num"
-google_analytics: 
+google_tagmanager: GTM-TPKR6RP
 
 # SEO settings
 title: devoctomy
