--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 email: nick@devoctomy.com
-baseurl: "http://www.devoctomy.com"
+baseurl: ""
 paginate: 5
 paginate_path: "/blog/page-:num"
 google_tagmanager: GTM-TPKR6RP
