--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,7 @@ baseurl: ""
 paginate: 5
 paginate_path: "/blog/page-:num"
 google_tagmanager: GTM-TPKR6RP
+comments: true
 
 # SEO settings
 title: devoctomy
