Small style tweaks, removed ideas page, changes to about page, and new blog on cachy.  Added my photo back in, no idea where that went.

--- a/_config.yml
+++ b/_config.yml
@@ -36,7 +36,7 @@ authors:
 
 # Build settings
 include: ["_categories"]
-exclude: ["Gemfile", "Gemfile.lock", "vendor"]
+exclude: ["Gemfile", "Gemfile.lock", "vendor", 'src', 'node_modules', '.bundle']
 markdown: kramdown
 permalink: /:year/:month/:day/:title/
 
